--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon dist/src/app.js"
+    "start": "node dist/src/app.js",
+    "start-dev": "nodemon dist/src/app.js"
   },
   "keywords": [],
   "author": "",
