--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node SENDGRID_KEY=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 SENDER=AnhNDH.B19CN022@stu.ptit.edu.vn dist/src/app.js",
+    "start": "SENDGRID_KEY=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 SENDER=AnhNDH.B19CN022@stu.ptit.edu.vn node dist/src/app.js",
     "start-dev": "nodemon dist/src/app.js"
   },
   "keywords": [],
